--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,62 @@
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="icon" type="image/x-icon" href="assets/svg/favicon.png">
   <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <style>
+    .loading {
+      display: flex;
+      flex-flow: row nowrap;
+      align-items: center;
+      justify-content: space-between;
+      width: 3em;
+      margin: auto;
+      height: 100vh;
+    }
+
+    .loading>span {
+      width: 0.3em;
+      height: 1em;
+      background-color: #673ab7;
+    }
+
+    .loading>span:nth-of-type(1) {
+      animation: grow 1s -0.45s ease-in-out infinite;
+    }
+
+    .loading>span:nth-of-type(2) {
+      animation: grow 1s -0.3s ease-in-out infinite;
+    }
+
+    .loading>span:nth-of-type(3) {
+      animation: grow 1s -0.15s ease-in-out infinite;
+    }
+
+    .loading>span:nth-of-type(4) {
+      animation: grow 1s ease-in-out infinite;
+    }
+
+    @keyframes grow {
+
+      0%,
+      100% {
+        transform: scaleY(1);
+      }
+
+      50% {
+        transform: scaleY(2);
+      }
+    }
+  </style>
 </head>
 
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="loading">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </app-root>
 </body>
 
 </html>
