--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-Hant">
 
 <head>
-  <meta charset="utf-8">
-  <title>當舖平台</title>
   <base href="/">
-
+  <title>Jmoney - 台灣最大現金、貸款、當舖黃頁</title>
+  <meta charset="utf-8">
+  <meta name="description" content="貸款金額利息自訂,借錢免手續費">
+  <meta name="keywords" content="當舖 現金 貸款 分期 借錢">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="icon" type="image/x-icon" href="assets/svg/favicon.png">
